--- a/index.html
+++ b/index.html
@@ -157,7 +157,8 @@
         
     </div>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/d3/4.11.0/d3.js"></script>
-    <script src="static/js/top_guesses.js"></script>
+    <script src="static/js/words.js"></script>
+    <script src="static/js/scores.js"></script>
     <script src="static/js/top_guesses_metrics.js"></script>
     <script src="static/js/app.js"></script>
     
